deploy/k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: "gateway:v1.1.1"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: gateway-config
              mountPath: /opt/youthcamp-2025-mall-be/gateway/conf/dev
      volumes:
        - name: gateway-config
          configMap:
            name: youthcamp-2025-mall-be-config
            items:
              - key: gateway-app-config
                path: conf.yaml
---
# service
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
spec:
    selector:
        app: gateway
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-svc
                port:
                  number: 80
